syntax = "proto3";

package auth;

option go_package = "/auth";

service AuthService {
  rpc ValidateToken(TokenRequest) returns (UserResponse);
}

message TokenRequest {
  string token = 1;
}

message UserResponse {
  string user_id = 1;
  string email = 2;
  bool is_valid = 3;
}